<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sta_je_covid"
                android:gravity="center"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/info_sta_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Covid_19"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Covid_19_novo"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sta_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opasnost"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opasnost_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/z_zivotinje"
                android:gravity="center"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/z_zivotinje_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenos"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenos_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sirenje"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sirenje_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/povrsine"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/povrsine_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inkubacija"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inkubacija_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lijecenje"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lijecenje_text"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="18sp"
                />



        </LinearLayout>
    </ScrollView>

</FrameLayout>