<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projekat.CovidFragment">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="653dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next_id"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/podaci_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/izbor_vakcine"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pfizer_BioNTech" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Moderna" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Johnson" />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sinopharm" />

                <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sputnik" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/second_f_button_id"
            android:layout_width="191dp"
            android:layout_height="60dp"
            android:layout_marginStart="100sp"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="100sp"
            android:layout_marginRight="100sp"
            android:layout_marginBottom="100sp"
            android:background="@color/secondaryLightColor"
            android:text="@string/dalje"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primaryDarkColor"
            app:rippleColor="@color/primaryLightColor" />
    </LinearLayout>


</layout>