<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.projekat.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.projekat.SecondFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.projekat.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.example.projekat.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>