<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.projekat.VaccineFragment">

    <LinearLayout
        android:id="@+id/vaccine_f_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vaccine_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/Covid_q"
            android:textColor="@color/primaryTextColor"
            android:textColorLink="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"

            android:orientation="vertical">

            <CheckBox
                android:id="@+id/covid_da_id"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/da" />

            <CheckBox
                android:id="@+id/covid_ne_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/ne" />

        </LinearLayout>

        <Button
            android:id="@+id/covid_next_b_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="200sp"
            android:layout_marginEnd="100sp"
            android:layout_marginRight="100sp"
            android:layout_marginBottom="100sp"
            android:background="@color/secondaryLightColor"
            android:text="@string/dalje"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primaryDarkColor"/>

    </LinearLayout>


</layout>