<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projekat.SecondFragment">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next_id"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/podaci_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/unos_podataka"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/last_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/birth_date_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/birth_date"
                android:importantForAutofill="no"
                android:inputType="date" />

            <Button
                android:id="@+id/secondFButtonId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:layout_marginLeft="100sp"
                android:layout_marginTop="130sp"
                android:layout_marginEnd="100sp"
                android:layout_marginRight="100sp"
                android:layout_marginBottom="100sp"
                android:background="@color/secondaryLightColor"
                android:text="@string/dalje"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/primaryDarkColor"
                app:rippleColor="@color/primaryLightColor" />
        </LinearLayout>

    </LinearLayout>


</layout>