<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projekat.AboutFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <TextView
        android:id="@+id/about_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/about"
        android:textColor="@color/primaryTextColor"
        android:textColorLink="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_t_id"
        android:layout_width="281dp"
        android:layout_height="448dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/about_text"
        android:textColor="@color/primaryTextColor"
        android:textColorLink="@color/primaryTextColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_id"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/app_text_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_id" />
</androidx.constraintlayout.widget.ConstraintLayout>